@@ -38,6 +38,10 @@
 <p>2018-02-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pdb.c (ReadPDBImage): Fix heap buffer overflow if blob is
+already at EOF when comment is read.  Fixes oss-fuzz issue 5997
+&quot;graphicsmagick/coder_PDB_fuzzer: Heap-buffer-overflow in
+SetImageAttribute&quot;.</li>
 <li>coders/dpx.c (ReadDPXImage): Fix memory leak of user data if
 user data is truncated.  Fix consumption of one uninitialized
 stack bytes.  Fixes oss-fuzz issue 5973:
